Final (#14)
* GET top and latest Event

* GET closest event

* ...

* cleanup

* ...

* ...

* ...

* aws

* email verification

* login only when verified

* ...

* ...

* created events return [] if empty

* joined events return [] if empty

* check valid creatorId

* check valid participantId, pairExists

* ...

* ...

* Delete .rnd

* Delete composer.lock

* Add files via upload

* Delete .rnd

* Delete composer.lock

* Add files via upload

* Delete .rnd

* Delete composer.lock

* ec2 key add

* Delete trashbusters.pem

* sendgrid .env

* undo sendgrid

* upload profile picture

* fail

* profile picture change working

* mailcontroller redirect

* factories delete

* assigned table

* event has dumpId property

* get dump name by id

* delete dump

* change password

* password change done

* Thunder Client export

* password recovery email sending

* password recovery

* listing participants by event id

* get participant by event id response edit

* email html

* response edit

* user city field

* email url

* profile deletion code email

* event picture URL field

* picture uploading for events

* created, joined event gives back eventPictureURL

* event picture url can be null

* swagger

* scribe

* cleanup

* composer

* AuthController Swagger

* AuthController Swagger done

* DumpController Swagger

* EventController Swagger

* ParticipantsController Swagger

* UserController Swagger

* TC requests -

* mail sending url

* db fill

* swagger rest
